# alienswarm-sdk

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: projectPreferences.cmake
cmake/toolchains/: linux-x64-crosscompile.cmake  linux-x86-crosscompile.cmake  mingw64-linux-x64.cmake  mingw64-linux-x86.cmake  native.cmake
game/mod_swarm/: GameInfo.txt  README.txt
game/mod_swarm/cfg/: README.txt
game/mod_swarm/maps/: README.txt
game/swarm/: GameInfo.txt  README.txt
game/swarm/resource/ui/: README.txt
game/swarm/scripts/: README.txt
src/game/client/: CMakeLists.txt  c_baseentity.cpp  cdll_client_int.cpp  particlemgr.h  physics_main_client.cpp  swarm_sdk_client-vs2010.vcxproj  swarm_sdk_client-vs2010.vcxproj.filters  swarm_sdk_client-vs2022.vcxproj.filters  swarm_sdk_client.vcproj  swarm_sdk_client.vcxproj  viewrender.cpp
src/game/missionchooser/: CMakeLists.txt  swarm_sdk_missionchooser-vs2010.vcxproj  swarm_sdk_missionchooser-vs2010.vcxproj.filters  swarm_sdk_missionchooser-vs2022.vcxproj  swarm_sdk_missionchooser-vs2022.vcxproj.filters  swarm_sdk_missionchooser.vcproj
src/game/missionchooser/layout_system/: tilegen_layout_system.cpp
src/game/server/: CMakeLists.txt  baseanimating.cpp  physics_main.cpp  swarm_sdk_server-vs2010.vcxproj  swarm_sdk_server-vs2010.vcxproj.filters  swarm_sdk_server-vs2022.vcxproj  swarm_sdk_server-vs2022.vcxproj.filters  swarm_sdk_server.vcproj
src/game/server/swarm/: asw_physics_prop_statue.cpp
src/game/shared/: predictioncopy.cpp  predictioncopy_helpers.cpp  predictioncopy_test.cpp
src/materialsystem/shaderlib/: CMakeLists.txt  shaderlib_sdk-vs2010.vcxproj  shaderlib_sdk-vs2010.vcxproj.filters  shaderlib_sdk-vs2022.vcxproj  shaderlib_sdk-vs2022.vcxproj.filters
src/materialsystem/stdshaders/: CMakeLists.txt  README.txt  buildsdkshaders.bat  stdshader_dx9_sdk-vs2010.vcxproj  stdshader_dx9_sdk-vs2010.vcxproj.filters  stdshader_dx9_sdk-vs2022.vcxproj.filters  stdshader_dx9_sdk.vcproj  stdshader_dx9_sdk.vcxproj
src/materialsystem/stdshaders/fxctmp9/: Bloom_ps20.inc  Bloom_ps20b.inc  BlurFilter_ps20.inc  BlurFilter_ps20b.inc  BlurFilter_vs20.inc  DebugTextureView_ps20.inc  DebugTextureView_ps20b.inc  DebugTextureView_vs20.inc  Downsample_nohdr_ps20.inc  Downsample_nohdr_ps20b.inc  Downsample_ps20.inc  Downsample_ps20b.inc  Downsample_vs20.inc  Engine_Post_ps20.inc  Engine_Post_ps20b.inc  HDRCombineTo16Bit_ps20.inc  HDRCombineTo16Bit_ps20b.inc  HDRCombineTo16Bit_vs20.inc  HDRSelectRange_ps20.inc  HDRSelectRange_ps20b.inc  HDRSelectRange_vs20.inc  Refract_ps20.inc  Refract_ps20b.inc  Refract_vs20.inc  ShatteredGlass_ps20.inc  ShatteredGlass_ps20b.inc  ShatteredGlass_vs20.inc  WaterCheap_ps20.inc  WaterCheap_ps20b.inc  WaterCheap_vs20.inc  Water_ps20.inc  Water_ps20b.inc  Water_vs20.inc  WorldTwoTextureBlend_ps20.inc  WorldTwoTextureBlend_ps20b.inc  aftershock_ps20.inc  aftershock_ps20b.inc  aftershock_vs20.inc  bloomadd_ps20.inc  bloomadd_ps20b.inc  (+270 more)
src/public/tier0/: memalloc.h  memoverride.cpp
src/public/tier1/: lerp_functions.h
src/public/vscript/: ivscript.h
